Bugfix - move column popup now visible when it's active

--- a/src/styles/cardsList.sass
+++ b/src/styles/cardsList.sass
@@ -104,5 +104,5 @@
     width: calc(100% + 15px)
 
 .move-column-popup
-  display: block
+  display: block !important
   position: fixed
